// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Picture Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 300,
    }
  }
>
  <picture
    className="picture"
    style={
      Object {
        "height": "auto",
        "maxWidth": 150,
      }
    }
  >
    <img
      alt="It one image"
      className="image"
      role=""
      src="https://picsum.photos/200/200"
    />
  </picture>
</div>
`;

exports[`Storyshots Atoms/Picture Image Decorative 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 300,
    }
  }
>
  <picture
    className="picture"
    style={
      Object {
        "height": "auto",
        "maxWidth": 150,
      }
    }
  >
    <img
      alt=""
      className="image"
      role="presentation"
      src="https://picsum.photos/200/200"
    />
  </picture>
</div>
`;

exports[`Storyshots Atoms/Picture Image Rounded 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 300,
    }
  }
>
  <picture
    className="picture"
    style={
      Object {
        "height": 200,
        "maxWidth": 200,
      }
    }
  >
    <img
      alt="It one image"
      className="image is-rounded"
      role=""
      src="https://picsum.photos/200/200"
    />
  </picture>
</div>
`;

exports[`Storyshots Atoms/Picture Image Rounder With Border 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 300,
    }
  }
>
  <picture
    className="picture"
    style={
      Object {
        "height": 200,
        "maxWidth": 200,
      }
    }
  >
    <img
      alt="It one image"
      className="image is-rounded with-border"
      role=""
      src="https://picsum.photos/200/200"
    />
  </picture>
</div>
`;

exports[`Storyshots Atoms/Picture Image With Border 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 300,
    }
  }
>
  <picture
    className="picture"
    style={
      Object {
        "height": "auto",
        "maxWidth": 150,
      }
    }
  >
    <img
      alt="It one image"
      className="image with-border"
      role=""
      src="https://picsum.photos/200/200"
    />
  </picture>
</div>
`;
